--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <title>React App</title>
   </head>
   <body>
-    <div id="ovelay"></div>
-    <div id="popup"></div>
+    <div id="overlay-root"></div>
+    <div id="backdraw-root"></div>
     <div id="root"></div>
   </body>
 </html>
